src/web/nextui/src/app/globals.css
/* This CSS is common to all pages */

* {
  box-sizing: border-box;
}

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;

  /* Light mode colors */
  --background-color: #ffffff;
  --text-color: #404040;
  --link-color: #2e6585;
  --border-color: lightgray;
  --table-border-color: lightgray;
  --pass-color: green;
  --fail-color: #ad0000;
  --smalltext-color: gray;
  --success-background-color: #d1ffd7;
  --variable-background-color: #f7f7f7;
  --header-background-color: #fffdf7;
  --insert-highlight-color: #d4fcbc;
  --delete-highlight-color: #fbb6c2;
  --prompt-highlight-color: linen;
}

/* Dark mode colors */
[data-theme='dark'] {
  /* Keep synced with prefers-color-scheme above */
  --background-color: #1a1a1a;
  --text-color: #f0f0f0;
  --link-color: #6fcaff;
  --border-color: #444444;
  --table-border-color: #444444;
  --pass-color: #4caf50;
  --fail-color: #f44336;
  --smalltext-color: #888888;
  --success-background-color: #216d2b;
  --variable-background-color: #333;
  --header-background-color: #333;
  --insert-highlight-color: #4f8a34;
  --delete-highlight-color: #8a3434;
  --prompt-highlight-color: #67605a;
}

html {
  font-size: 16px;
  background-color: var(--background-color);
  color: var(--text-color);
}

body {
  margin: 0;
}

a {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

* {
  box-sizing: border-box;
}

